@@ -1,0 +1,3 @@
+---
+Repository: https://github.com/example/blah.git
+Repository-Browse: https://github.com/example/blah
