@@ -1,0 +1,3 @@
+Set upstream metadata fields: Bug-Database, Bug-Submit, Name, Security-Contact.
+Certainty: likely
+Fixed-Lintian-Tags: upstream-metadata-missing-bug-tracking
