@@ -1,0 +1,7 @@
+---
+Name: blah
+Bug-Database: https://github.com/example/blah/issues
+Bug-Submit: https://github.com/example/blah/issues/new
+Repository: https://github.com/example/blah.git
+Repository-Browse: https://github.com/example/blah
+Security-Contact: https://github.com/example/blah/tree/HEAD/SECURITY.md
