@@ -3,6 +3,7 @@ lintian-brush (0.83) UNRELEASED; urgency=medium
   * Add guide on writing fixers to doc/.
   * Add fixer for newer-debconf-template.
   * Add fixer for field-name-typo-in-tests-control.
+  * Set Security-Contact when SECURITY.md is present.
 
  -- Jelmer Vernooĳ <jelmer@debian.org>  Tue, 13 Oct 2020 18:26:10 +0000
 
